<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.3.1.RELEASE</version>
    <relativePath/>
  </parent>

  <groupId>com.tibiacalcs</groupId>
  <artifactId>tibia-calcs-parent</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>tibia-calcs-parent</name>

  <modules>
    <module>tibia-calcs-core</module>
    <module>tibia-calcs-discord-bot</module>
    <module>tibia-calcs-processor</module>
    <module>tibia-calcs-log4j2</module>
    <module>tibia-data-api</module>
  </modules>

  <properties>
    <java.version>14</java.version>
    <argLine>-Dfile.encoding=UTF-8</argLine>
    <spring-cloud.version>Hoxton.SR5</spring-cloud.version>
    <jacoco.version>0.8.5</jacoco.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- Spring -->
      <dependency>
        <groupId>org.springframework.cloud</groupId>
        <artifactId>spring-cloud-dependencies</artifactId>
        <version>${spring-cloud.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <!-- TibiaCalcs modules-->
      <dependency>
        <groupId>com.tibiacalcs</groupId>
        <artifactId>tibia-data-api</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.tibiacalcs</groupId>
        <artifactId>tibia-calcs-discord-bot</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.tibiacalcs</groupId>
        <artifactId>tibia-calcs-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.tibiacalcs</groupId>
        <artifactId>tibia-api</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.tibiacalcs</groupId>
        <artifactId>tibia-calcs-log4j2</artifactId>
        <version>${project.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <!-- Log4j2 -->
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
    </dependency>

    <!-- Spring -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-configuration-processor</artifactId>
    </dependency>

    <!-- JUnit5 -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>

    <!-- Lombok -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco.version}</version>
        <executions>
          <execution>
            <id>report</id>
            <goals>
              <goal>prepare-agent</goal>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>
            @{argLine} --enable-preview
          </argLine>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <release>${java.version}</release>
          <compilerArgs>
            --enable-preview
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <classifier>exec</classifier>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>build-info</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
